Fixes #1897 : IOrderedLayoutVertical: Centered/right captionless texfield pushes error indicator to next line on FF3 Mac and on Safari3
svn changeset:5040/svn branch:trunk

--- a/WebContent/ITMILL/themes/default/orderedlayout/orderedlayout.css
+++ b/WebContent/ITMILL/themes/default/orderedlayout/orderedlayout.css
@@ -29,4 +29,7 @@
 .i-orderedlayout-c * { float:left; display: block;}
 .i-orderedlayout-w-e { float:left;}
 * html .i-orderedlayout-c, * html .i-orderedlayout-w { height: 1%; }
-.i-orderedlayout-c, .i-orderedlayout-w { display: block; }
+.i-orderedlayout-w { display: block; }
+.i-orderedlayout-c { float:left; display: block;}
+*+ html .i-orderedlayout-c { float:none; }
+* html .i-orderedlayout-c { float:none; }
